ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
10/29/08 Oleh_Derevenko

        * Premake scripts changed to only include chosen collision library
          sources in project on Windows. --all-collis-libs premake option 
          added to allow inclusion of all collision library sources into the 
          project

10/15/08 Remi Ricard (papaDoc)
        * Applying patch #2158425 64-bit GIMPACT provided by Mark
          William. This patch enable GIMPACT to works on 64-bit machine.

10/15/08 Remi Ricard (papaDoc)
        * Add function dJointGetPRAngle and dJointGetPRAngleRate

10/15/08 Remi Ricard (papaDoc)
        * Enable the motor on the rotoide part of the PR joint

10/15/08 Remi Ricard (papaDoc)
        * Add unit test to check if using directly a joint
          or using after setting with default values is the same.
        * Add function setRelativeValues called in dJointAttach for
          all joints.

10/10/08 Remi Ricard (papaDoc)
        * Fix bug in dJointGetPUAxis2. The axis was not multiplied with the
          the rotation matrix of the good body.
        * Fix bug if there is only one body on the PU joint the axis returned
          was not the right one.
        * Add unit test to verify previous bug.

10/03/08 Rodrigo Hernandez (Kwizatz)
	* Added Blender script to create ODE convex geoms under tools.

10/01/08 Rodrigo Hernandez (Kwizatz)
	* Convex-Convex collision detection code is finally stable.

08/31/08 Daniel K. O.
        * Applied patch 2080674: Improved dBodySetRotation; now exact rotation
          matrices are preserved until the next simulation step.

08/07/08 Daniel K. O.